pre messing around

--- a/SyncSharp/SyncSharp.csproj
+++ b/SyncSharp/SyncSharp.csproj
@@ -10,4 +10,8 @@
     <Folder Include="impl\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SyncSharp.Common\SyncSharp.Common.csproj" />
+  </ItemGroup>
+
 </Project>
