Impliment more of the GUI.

--- a/SyncSharp/SyncSharp.csproj
+++ b/SyncSharp/SyncSharp.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ookii.Dialogs.Wpf" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SyncSharp.Common\SyncSharp.Common.csproj" />
   </ItemGroup>
 
